--- a/kooplexhub/project/templates/project_list.html
+++ b/kooplexhub/project/templates/project_list.html
@@ -8,6 +8,8 @@
 
 
 {% block realcontent %}
+<h4 class="mb-3">List project</h4>
+
 {% if userprojectbindinglist|length %}
   <input class="form-control me-2 mb-3 mt-3" type="text" id="search_project" placeholder="Search project" title="Type in a name" data-intro="#search_project">
   <div id="projectListPane" data-intro="#project_list">
