--- a/kooplexhub/container/templates/container_partial_list.html
+++ b/kooplexhub/container/templates/container_partial_list.html
@@ -10,7 +10,7 @@
           <div>{% button_start_open_restart  container next_page='container:list' %}</div>
 	  <div class="ms-5" style="cursor: pointer;" 
                data-bs-toggle="collapse" data-bs-target="#collapse-{{ container.id }}" aria-expanded="false" aria-controls="collapse-{{ container.id }}">
-            <span id="container-name-{{ container.id }}" class="badge rounded-pill bg-secondary p-2 ps-3 pe-3">{{ container.friendly_name }}</span>
+            <span id="container-name-{{ container.id }}"><i class="bi bi-info-circle pe-2"></i>{{ container.friendly_name }}</span>
 	  </div>
 	</div>
         <div class="d-flex flex-row justify-content-end">
