--- a/kooplexhub/project/templates/project_partial_list.html
+++ b/kooplexhub/project/templates/project_partial_list.html
@@ -10,7 +10,7 @@
           <div data-intro="#button_operation">{% dropdown_start_open_stop bindings=projectcontainerbindings ancestor=project ancestor_type='project' next_page='project:list' %}</div>
 	  <div class="ms-5" style="cursor: pointer;" 
                data-bs-toggle="collapse" data-bs-target="#collapse-{{ project.id }}" aria-expanded="false" aria-controls="collapse-{{ project.id }}">
-            <span id="project-name-{{ project.id }}" class="badge rounded-pill bg-secondary p-2 ps-3 pe-3">{{ project.name }}</span>
+            <span id="project-name-{{ project.id }}"><i class="bi bi-info-circle pe-2"></i>{{ project.name }}</span>
 	  </div>
 	</div>
         <div class="d-flex flex-row justify-content-end">
