no titles, they consume space unnecessary auto hide popup message apply_cancel as template tag placeholder for image description reorganize configure button's placement

--- a/kooplexhub/container/templates/container_list.html
+++ b/kooplexhub/container/templates/container_list.html
@@ -17,6 +17,9 @@
 
 {% block scripts %}
 <script>
+$( document ).ready(function() {
+  $.cookie("next_page", "container:clist", { 'path': '/', 'secure': true });
+});
 $("#search_container").keyup(function() {
   var pattern = $( this ).val().toUpperCase();
   console.log( "search: " + pattern );
