--- a/kooplexhub/hub/templates/mainmenu.html
+++ b/kooplexhub/hub/templates/mainmenu.html
@@ -4,9 +4,8 @@
 {% with li_a_s="ps-2 pe-1 pt-0 pb-0 mt-2" %}
 <nav class="p-2 pt-3 navbar navbar-dark bg-dark d-flex align-items-start" style="min-height: 100vh;">
   <ul class="navbar-nav flex-column flex-md-column">
-    <li class="nav-item">
+    <li class="nav-item mt-2 ms-1">
       <a class="nav-item" href="/hub/">
-  	{# fixme: colorful logo wo backround #}
         <img src="/static/logo-halfcolored.png" width="120" height="30" alt="Kooplex Hub" class="d-none d-sm-block" data-toggle="tooltip" title="Access home page through Kooplex logo" data-placement="bottom">
         <img src="/static/logo-onlycogwheels.png" width="30" height="auto" alt="Kooplex Hub" class="d-block d-sm-none" data-toggle="tooltip" title="Access home page through Kooplex logo" data-placement="bottom">
       </a>
