--- a/kooplexhub/container/templates/container_new.html
+++ b/kooplexhub/container/templates/container_new.html
@@ -1,6 +1,8 @@
 {% extends 'container_layout.html' %}
 
 {% load static %}
+{% load extras %}
+
 {% block chardinhelp %}
          url: "{% static 'chardinjs/help_new_environment.json' %}"
 {% endblock %}
@@ -9,13 +11,23 @@
 {% block realcontent %}
 <div class="container mt-2">
   <form id="service_new" class="form-horizontal was-validated" action="{% url 'container:new' %}" method="post">
-    <h4 class="mb-3">New environment</h4>
-  <h5>Set details of your new environment</h5>
   {% csrf_token %}
-  <table>
-    {{ form.as_table }}
-  </table>
-  {% include 'apply_cancel.html' with hide_cancel=True apply='Create' %}
+  {% title "Set the details of your new environment" %}
+  <div class="card bg-light border-secondary shadow p-3">
+    <div class="container-fluid d-flex flex-row">
+      <div class="d-flex">
+        <table>
+          {{ form.as_table }}
+        </table>
+      </div>
+      <div class="d-flex ms-3">
+        <p class="fw-bolder">Image description:</p>
+	{# fixme: seems line is not broken #}
+	<p id="imageDescription"></p>
+      </div>
+    </div>
+    {% apply_cancel hide_cancel=True label_apply='Create' %}
+  </div>
   </form>
 </div>
 {% endblock %}
