--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load extras %}
 <!doctype html>
 <html lang="en" style="height:100%">
   <head>
@@ -7,9 +8,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-
+    {# most used icons #}
     <link rel="stylesheet" type="text/css" href="{% static 'fonts/icons-1.8.3/font/bootstrap-icons.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'fonts/open-iconic-master/font/css/open-iconic-bootstrap.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'fonts/remix-icon/remixicon.css' %}">
+
     <link rel="shortcut icon" type="image/png" href="/static/kooplexicon.png"/>
     <title>{% block page_title %}{% endblock %}</title>
 
@@ -42,15 +45,9 @@ grid-column: span 8;
 .pageend{
   position:absolute;
 }
-.helloname{
-  font-size: 15px;
-  }
  }
 
  @media all and (max-width: 1265px) {
-  .helloname{
-  font-size: 15px;
-  }
   .pageend{
   margin-top: 10px;
 }
@@ -106,7 +103,7 @@ grid-column: span 8;
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex">
             <div class="container-fluid d-flex flex-column flex-md-row">
 	      {% block submenu %}
-	      <a class="ms-3 navbar-brand d-flex justify-content-start helloname" data-intro="#envs" href="#">Hi, <u class="ms-1"> {{ user.first_name }} {{ user.last_name }}</u>. Welcome to Kooplex!</a>
+	      <a class="ms-3 mt-3 mb-3 navbar-brand d-flex justify-content-start fs-6" data-intro="#envs" href="#">Hi {{ user.first_name }} {{ user.last_name }}. Welcome to Kooplex!</a>
 	      {% endblock %}
               <ul class="me-3 navbar-nav d-flex flex-row">
                 <li class="nav-item"><a href="#" class="nav-link" data-toggle="chardinjs"><span class="oi oi-question-mark" data-toggle="tooltip" title="Help" data-placement="bottom"></a></li>
@@ -145,38 +142,12 @@ grid-column: span 8;
         {% endblock %}
 	{% block bodycontent %}{% endblock %}
 	{% block infomessages %}
-	<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-          <div id="infoMessages" class="toast fade show" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-              <strong class="me-auto">Messages</strong>
-              <button id="closeButton" type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-            </div>
-            <div class="toast-body">
-            {% for message in messages %}
-              {% if message.level == 25 %}
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                  <strong>Success</strong> {{ message }}
-                </div>
-              {% endif %}
-              {% if message.level == 20 %}
-                <div class="alert alert-info alert-dismissible fade show" role="alert">
-                  <strong>Info</strong> {{ message }}
-                </div>
-              {% endif %}
-              {% if message.level == 40 %}   
-                <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                  <strong>Error:</strong> {{ message }}
-                </div>
-              {% endif %}
-            {% endfor %}
-            </div>
-          </div>
-        </div>
+	{{ messages|popupmessage }}
 	<script>
 	$(document).ready(function () {
 		var widget = $("#infoMessages");
 		console.log( widget );
-		setTimeout(function () { widget.hide() }, 2500);
+		setTimeout(function () { widget.hide() }, 7000);
 	});
 	</script>
       {% endblock %}
