--- a/kooplexhub/project/templates/project_new.html
+++ b/kooplexhub/project/templates/project_new.html
@@ -1,16 +1,28 @@
 {% extends 'project_layout.html' %}
 
+{% load extras %}
+
 {% block realcontent %}
-<h4 class="mb-3">New project</h4>
 
 <div class="container mt-2">
   <form id="project_new" class="form-horizontal was-validated" action="{% url 'project:new' %}" method="post">
-    <h5>Describe your new project</h5>
     {% csrf_token %}
-    <table>
-      {{ form.as_table }}
-    </table>
-    {% include 'apply_cancel.html' with apply='Create' hide_cancel=True %}
+    {% title "Describe your new project" %}
+  <div class="card bg-light border-secondary shadow p-3">
+    <div class="container-fluid d-flex flex-row">
+      <div class="d-flex">
+        <table>
+          {{ form.as_table }}
+        </table>
+      </div>
+      <div class="d-flex ms-3">
+        <p class="fw-bolder">Image description:</p>
+	{# fixme: seems line is not broken #}
+	<p id="imageDescription"></p>
+      </div>
+    </div>
+    {% apply_cancel hide_cancel=True label_apply='Create' %}
+  </div>
   </form>
 </div>
 {% endblock %}
