--- a/kooplexhub/container/templates/container_new.html
+++ b/kooplexhub/container/templates/container_new.html
@@ -21,9 +21,10 @@
         </table>
       </div>
       <div class="d-flex ms-3">
-        <p class="fw-bolder">Image description:</p>
-	{# fixme: seems line is not broken #}
-	<p id="imageDescription"></p>
+        <div>
+          <p class="fw-bolder">Image description:</p>
+          <p id="imageDescription"></p>
+        </div>
 	{{ form.descriptions }}
       </div>
     </div>
